@@ -29,6 +29,6 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2018-2021 Nigel Horne
+Copyright (C) 2018-2023 Nigel Horne
 
 This program is released under the following licence: GPL2
