@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::Most tests => 22;
+use Test::Most tests => 25;
 use Test::NoWarnings;
 use Test::Deep;
 
@@ -19,6 +19,7 @@ DATE: {
 	cmp_deeply($f->parse_datetime({ date => 'Sep 29, 1939' }), methods('dmy' => '29-09-1939'));
 
 	ok(!defined($f->parse_datetime(date => 'bet 28 Jul 1914 and 11 Nov 1919')));
+	ok(!defined($f->parse_datetime({ date => '2022' })));
 
 	my @dts = $f->parse_datetime({ date => 'bet 28 Jul 1914 and 11 Nov 1918' });
 
@@ -27,6 +28,9 @@ DATE: {
 	ok($dts[0]->dmy() eq '28-07-1914');
 	isa($dts[1], 'DateTime');
 	ok($dts[1]->dmy() eq '11-11-1918');
+
+	cmp_ok($f->parse_datetime('25 Dec 2022')->dmy(), 'eq', '25-12-2022', 'Basic test');
+	ok(!defined($f->parse_datetime('20 Dec 20')));
 
 	cmp_deeply(DateTime::Format::Genealogy::parse_datetime('29 Sep 1939'), methods('dmy' => '29-09-1939'));
 	cmp_deeply(DateTime::Format::Genealogy::parse_datetime(date => '29 Sep 1939'), methods('dmy' => '29-09-1939'));
